assets/styles.css
:root {
  --green: #1c4219;
  --grey: #d0ccd0;
  --white: #fbfcff;
  --blue: #1c6e8c;
  --black: #000;
  --heading-font: "Futura Book", sans-serif;
  --body-font: "Elgian", serif;
}
.product-grid {
  display: grid;
  gap: 2rem;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  list-style: none;
  padding: 0;
}

.product-item {
  background: var(--white);
  border: 1px solid var(--grey);
  padding: 1rem;
  text-align: center;
}

.product-item img {
  max-width: 100%;
  height: auto;
}
.featured-products-wrapper {
  background-color: var(--grey);
}

